# rarog

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_hoisting_experiment.sh  topological_ordering_count.cpp
lib/: CMakeLists.txt
memory_allocation_answers/: model_10.out  model_17.out  model_22.out  model_23.out  model_30.out  model_32.out  model_33.out  model_38.out  model_39.out  model_41.out  model_42.out  model_45.out  model_46.out  model_47.out  model_49.out  model_63.out  model_64.out  model_73.out  model_74.out  model_76.out  model_82.out  model_83.out  model_84.out  model_85.out  model_86.out  model_97.out
memory_allocation_input/: model_10.in  model_100.in  model_11.in  model_12.in  model_13.in  model_14.in  model_15.in  model_16.in  model_17.in  model_18.in  model_19.in  model_2.in  model_22.in  model_25.in  model_26.in  model_27.in  model_28.in  model_29.in  model_30.in  model_31.in  model_33.in  model_34.in  model_35.in  model_36.in  model_37.in  model_41.in  model_43.in  model_45.in  model_46.in  model_47.in  model_48.in  model_5.in  model_50.in  model_52.in  model_53.in  model_54.in  model_57.in  model_58.in  model_6.in  model_64.in  (+26 more)
memory_allocation_instances/: model_1.in  model_20.in  model_21.in  model_23.in  model_24.in  model_3.in  model_32.in  model_38.in  model_39.in  model_4.in  model_40.in  model_42.in  model_44.in  model_49.in  model_51.in  model_55.in  model_56.in  model_59.in  model_60.in  model_61.in  model_62.in  model_63.in  model_65.in  model_66.in  model_70.in  model_71.in  model_78.in  model_79.in  model_81.in  model_82.in  model_87.in  model_91.in  model_94.in  model_96.in
memory_allocation_output/: model_1.out  model_100.out  model_11.out  model_12.out  model_13.out  model_14.out  model_15.out  model_16.out  model_18.out  model_19.out  model_2.out  model_20.out  model_21.out  model_24.out  model_25.out  model_26.out  model_27.out  model_28.out  model_29.out  model_3.out  model_31.out  model_34.out  model_35.out  model_36.out  model_37.out  model_4.out  model_40.out  model_43.out  model_44.out  model_48.out  model_5.out  model_50.out  model_51.out  model_52.out  model_53.out  model_54.out  model_55.out  model_56.out  model_57.out  model_58.out  (+34 more)
memory_visualizer/: CMakeLists.txt
tools/: CMakeLists.txt  rarog-opt.cpp
(+170 files in other folders)
